--- a/style.css
+++ b/style.css
@@ -24,16 +24,19 @@ a {
     margin: 0 auto;
     width: min-content;
     gap: 24px;
+    transition: all ease-in-out 0.25s;
 }
 .card {
     display: inline-block;
-    animation: append-animate .4s cubic-bezier(0.39, 0.575, 0.565, 1);
+    transition: all ease-in-out 0.25s;
+    position: relative;
 }
 
 .card-bg {
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
     background: linear-gradient(180deg, rgba(20, 20, 20, 0) 70%, rgba(20, 20, 20, 0.6) 100%), url("test_image.jpg");
     background-size: cover;
+    background-position: left;
     width: 196px;
     height: 128px;
     padding: 8px;
@@ -43,10 +46,15 @@ a {
     align-items: flex-end;
     border-radius: 12px;
     box-sizing: border-box;
+    border: 0px solid red;
 }
 
 .card:hover .hidden {
     opacity: 1;
+}
+
+.new-card {
+    animation: append-animate .3s cubic-bezier(0.39, 0.575, 0.565, 1);
 }
 
 .card p {
@@ -103,11 +111,11 @@ a {
 /* Animations */
 @keyframes append-animate {
 	from {
-		transform: translateY(20%);
 		opacity: 0;
+        width: 0px;
 	}
 	to {
-		transform: translateY(0%);
 		opacity: 1;	
+        width: 196px;
 	}
 }
