--- a/style.css
+++ b/style.css
@@ -16,6 +16,7 @@ body {
 
 a {
     text-decoration: none;
+    color: initial;
 }
 
 .container {
@@ -26,39 +27,58 @@ a {
     gap: 24px;
     transition: all ease-in-out 0.25s;
 }
+
+.empty-card {
+    box-sizing: border-box;
+    width: 196px;
+    height: 128px;
+}
+
+/* customizable background etc */
 .card {
     display: inline-block;
     transition: all ease-in-out 0.25s;
     position: relative;
-}
-
-.card-bg {
-    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-    background: linear-gradient(180deg, rgba(20, 20, 20, 0) 70%, rgba(20, 20, 20, 0.6) 100%), url("test_image.jpg");
     background-size: cover;
     background-position: left;
     width: 196px;
     height: 128px;
-    padding: 8px;
+    border-radius: 12px;
+    background-image: url("test_image.jpg");
+    box-shadow: 0px 4px 4px 2px rgba(0, 0, 0, 0.25);
+}
+
+/* style of card */
+.card a div {
+    /*box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25), /*inset 0px -32px 16px -4px rgba(0, 0, 0, 0.25)/*, inset 0px 24px 12px -16px rgba(176, 176, 176, 0.25);*/
+    /*background-image: linear-gradient(180deg, rgba(0, 0, 0, 0) 70%, rgba(0, 0, 0, 0.4) 100%);*/
+    border-radius: 12px;
+    box-sizing: border-box;
+    height: 100%;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    align-items: flex-end;
-    border-radius: 12px;
-    box-sizing: border-box;
 }
 
-.add-btn {
+.card-url {
+    align-items: flex-end;
+}
+
+.card-add {
     box-sizing: border-box;
-    width: 196px;
-    height: 128px;
-    border-radius: 12px;
-    background-color: red;
+    background: #f2f2f2;
+    padding: 1em 1em 0 1em;
+}
+
+.card-add h5 {
+    margin: 0;
 }
 
 .add {
-    
-    grid-row-start: span 9000;
+    -ms-grid-row-span: 2;
+    order: 0;
+    z-index: 200;
+    transition: all 200ms ease-in-out;
 }
 
 .card:hover .hidden {
@@ -70,17 +90,21 @@ a {
 }
 
 .card p {
+    padding: 0.5em 1em;
     text-align: left;
-    margin: 0.2em 0.5em;
+    margin: 0;
     text-decoration: none;
     color: white;
     width: -webkit-fill-available;
+    border-radius: 0px 0px 12px 12px;
     font-weight: 600;
     font-size: smaller;
+    background-color: hsla(128, 25%, 10%, 0.4);
 }
 
 .edit-button {
     border-radius: 4px;
+    margin: 8px;
     background-color: white;
     opacity: 0;
     border: none;
@@ -121,10 +145,17 @@ a {
 @keyframes append-animate {
 	from {
 		opacity: 0;
-        width: 0px;
 	}
 	to {
 		opacity: 1;	
-        width: 196px;
 	}
+}
+
+@keyframes fade-in {
+    from {
+        opacity: 0;
+    }
+    to {
+        opacity: 1;
+    }
 }
