--- a/style.css
+++ b/style.css
@@ -12,6 +12,7 @@
 body {
     font-family: Arial, Helvetica, sans-serif;
     margin: 0;
+    padding-bottom: 50vh;
 }
 
 a {
@@ -36,9 +37,7 @@ a {
 
 /* customizable background etc */
 .card {
-    display: inline-block;
     transition: all ease-in-out 0.25s;
-    position: relative;
     background-size: cover;
     background-position: left;
     width: 196px;
@@ -49,12 +48,11 @@ a {
 }
 
 /* style of card */
-.card a div {
+.card a {
     /*box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25), /*inset 0px -32px 16px -4px rgba(0, 0, 0, 0.25)/*, inset 0px 24px 12px -16px rgba(176, 176, 176, 0.25);*/
     /*background-image: linear-gradient(180deg, rgba(0, 0, 0, 0) 70%, rgba(0, 0, 0, 0.4) 100%);*/
     border-radius: 12px;
     box-sizing: border-box;
-    height: 100%;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
@@ -62,23 +60,57 @@ a {
 
 .card-url {
     align-items: flex-end;
+    height: 100%;
+}
+
+.add {
+    /*grid-column-end: span 2;*/
+    /*width: 416px;*/
+    z-index: 200;
+    transition: all 200ms ease-in-out;
 }
 
 .card-add {
     box-sizing: border-box;
     background: #f2f2f2;
-    padding: 1em 1em 0 1em;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    border-radius: 12px;
+    height: 100%;
 }
 
-.card-add h5 {
+.card-add > * {
+    margin: 0 1em;
+}
+.card-add > *:first-child {
+    margin: 1em 1em 0 1em;
+}
+.card-add > *:last-child {
     margin: 0;
 }
 
-.add {
-    -ms-grid-row-span: 2;
-    order: 0;
-    z-index: 200;
-    transition: all 200ms ease-in-out;
+.card-add h5 {
+    margin: 1em 1em 0 1em;
+}
+
+.card-add input[type="file"] {
+    font-size: 0.8em;
+}
+
+.card-add label {
+    cursor: pointer;
+}
+
+.card-add input[type="submit"] {
+    border: none;
+    cursor: pointer;
+    background-color: inherit;
+    border-radius: 0 0 12px 12px;
+}
+
+.card-add input[type="submit"]:hover {
+    background-color: dimgrey;
 }
 
 .card:hover .hidden {
@@ -89,32 +121,54 @@ a {
     animation: append-animate .3s cubic-bezier(0.39, 0.575, 0.565, 1);
 }
 
-.card p {
+/* Clickable links */
+.card-url > p {
     padding: 0.5em 1em;
     text-align: left;
     margin: 0;
     text-decoration: none;
     color: white;
     width: -webkit-fill-available;
-    border-radius: 0px 0px 12px 12px;
+    border-radius: 0 0 12px 12px;
     font-weight: 600;
     font-size: smaller;
     background-color: hsla(128, 25%, 10%, 0.4);
+    transition: all ease-in-out 200ms;
+    position: relative;
 }
+.card-url > p > span {
+    position: absolute;
+    font-weight: normal;
+    opacity: 0;
+    animation: fade-in 250ms ease-out;
+    display: none;
+}
+p:hover {
+    padding-bottom: 1.8em;
+    background-color: hsla(128, 0%, 10%, 0.8);
+}
+p:hover > span {
+    opacity: 1;
+    display: block;
+}
+
 
 .edit-button {
     border-radius: 4px;
-    margin: 8px;
-    background-color: white;
+    margin: 0.8em;
+    margin-left: 12em;
     opacity: 0;
     border: none;
     background: #F2F2F2;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
     transition: ease 200ms;
     cursor: pointer;
+    position: absolute;
 }
 
-/*
+
+
+/* Media Queries
 @media(min-width: 341px) {
     .container{
         grid-template-columns: repeat(2, auto);
