--- a/style.css
+++ b/style.css
@@ -102,7 +102,7 @@ a {
     color: gray;
 }
 
-.card-add input[type="submit"] {
+.card-add button {
     border: none;
     cursor: pointer;
     background-color: hsla(0, 0%, 95%, 0.5);
@@ -110,7 +110,7 @@ a {
     transition: 200ms ease-in-out;
 }
 
-.card-add input[type="submit"]:hover {
+.card-add button:hover {
     background-color: hsla(180, 50%, 20%, 1);
     color: white;
 }
