--- a/style.css
+++ b/style.css
@@ -164,6 +164,7 @@ a {
     text-align: left;
     margin: 0;
     text-decoration: none;
+    overflow: hidden;
     color: white;
     width: -webkit-fill-available;
     border-radius: 0 0 12px 12px;
